[package]
name = "tauri-plugin-theme"
links = "tauri-plugin-theme"
version = "2.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/alekitto/tauri-plugin-theme"
description = "Dynamically change Tauri App theme"
keywords = ["tauri", "plugin", "theme"]
readme = "README.md"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }

[dependencies]
tauri = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }

[target."cfg(target_os = \"macos\")".dependencies.cocoa]
version = "0.26"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
futures-lite = "2.4"
gtk = "0.18"
tintanum = "0.1"
tokio = { version = "1", features = ["macros"] }

[target."cfg(target_os = \"windows\")".dependencies]
dirs-next = "2.0"
webview2-com = "0.33"
windows = "0.58"
windows-core = "0.58"
windows-version = "0.1"
