[package]
name = "tauri-plugin-theme"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/alekitto/tauri-plugin-theme"
description = "Dynamically change Tauri App theme"
keywords = ["tauri", "plugin", "theme"]
readme = "README.md"
links = "tauri-plugin-theme"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta", features = ["build"] }

[dependencies]
tauri = { version = "2.0.0-beta" }
serde = { version = "1", features = ["derive"] }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = "0.18"

[target."cfg(windows)".dependencies]
dirs-next = "2.0"

[target."cfg(target_os = \"macos\")".dependencies.cocoa]
version = "0.25"
